# celestrian

./: .gitignore  CMakeLists.txt  README.md  celestrian_state.json
.agent/: agent.md  design.md  design_doc.md  glossary.md  implementation.md  style.md  tech.md
.cache/clangd/index/: audio_engine.cc.D6C9B40572F9AC9F.idx  audio_engine.h.2C1C86479F3BA9A4.idx  audio_engine_tests.cc.C2A4C2261570DECA.idx  audio_node.h.F5BBD590778C3DFC.idx  box_node.cc.03C2C9730999E17A.idx  box_node.h.E276C7EDFAA76F4B.idx  box_node_tests.cc.AAC9C05770F505A0.idx  clip_node.cc.EB5CD0ACE2B0F114.idx  clip_node.h.A8C86A92C61FC14E.idx  clip_node_tests.cc.9C12BC2522AF6C07.idx  main.cc.A8152AADDB5D7C99.idx  main_component.cc.B244E39733A93C54.idx  main_component.h.2E43DCA3FB6E13DE.idx  quantum_propagation_tests.cc.FFCEEBECB138F915.idx  regression_tests.cc.FC15864EC69F3755.idx  test_runner.cc.A8F69FBD662995F7.idx
docs/: design.md  design_alternatives.md  implementation.md  phase_aligned_recording.md  recording.md
src/: audio_engine.cc  audio_engine.h  audio_node.h  box_node.cc  box_node.h  clip_node.cc  clip_node.h  main.cc  main_component.cc  main_component.h
tests/: audio_engine_tests.cc  box_node_tests.cc  clip_node_tests.cc  quantum_propagation_tests.cc  regression_tests.cc  test_runner.cc
ui/: index.html
ui/css/: style.css
ui/js/: app.js  bridge.js  canvas_renderer.js  math_utils.js  stack_logic.js  viewport.js
ui/js/tests/: math.test.mjs  stack_logic.test.mjs
